# github_scraper

./: .flake8  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  TODO.md  manage.py  pyproject.toml  setup.cfg
scraper/: __init__.py  base.py  exceptions.py  github.py  logger.py  main.py  repo.py  tests.py  urls.py  user.py  utils.py
scraper/migrations/: 0001_initial.py  0002_auto_20200717_0033.py  0003_auto_20200717_0033.py  0004_auto_20200717_0139.py
scraper/models/: next_url.py  repo.py  user.py
scraper/serializers/: __init__.py  next_url.py  repo.py  user.py
scraper/tests/: test_model_next_url.py  test_model_repo.py  test_model_user.py  test_view_next_url.py  test_view_repo.py  test_view_user.py
scraper/views/: next_url.py  repo.py  user.py
scraper_site/: asgi.py  settings.py  urls.py  wsgi.py
service/: urls.py  utils.py  views.py
service/migrations/: 0001_initial.py  0002_auto_20200717_2122.py  0003_auto_20200717_2123.py  0004_auto_20200717_2129.py  0005_auto_20200717_2130.py  0006_auto_20200717_2133.py  0007_auto_20200717_2135.py  0008_auto_20200717_2145.py  0009_auto_20200717_2146.py  0010_license.py  0011_auto_20200717_2214.py  0012_auto_20200717_2304.py  0013_auto_20200717_2321.py  0014_auto_20200717_2330.py  0015_auto_20200717_2340.py  0016_auto_20200718_0002.py  0017_auto_20200718_0016.py  0018_auto_20200718_0018.py  0019_auto_20200718_0036.py  0020_auto_20200718_0159.py  0021_auto_20200718_0201.py  0022_auto_20200718_0417.py  0023_auto_20200718_0446.py
service/models/: __init__.py  license.py  next_url.py  repo.py  user.py
(+15 files in other folders)
